Fix nav-link wrapping on mobile

--- a/source/_static/scss/includes/_nav.scss
+++ b/source/_static/scss/includes/_nav.scss
@@ -379,16 +379,11 @@
     position: relative;
     box-shadow: 0 0.1875rem 0.375rem rgba($black, 0.15);
 
-    & > .container {
-        white-space: nowrap;
-        overflow-x: auto;
-        display: flex;
-        @include hide-scrollbars();
-
+	& > .container {
 		&:after {
 			background-image: linear-gradient(270deg, var(--content-nav-bg) 0%, var(--content-nav-bg) 10%, transparent 100%);
 		}
-    }
+	}
 }
 
 :root {
@@ -409,9 +404,24 @@
     }
 }
 
+.platform-nav__inner,
+.platform-nav__dropdown nav {
+	white-space: nowrap;
+	overflow-x: auto;
+	padding: 0 var(--content-padding);
+
+	@include hide-scrollbars();
+}
+
+.platform-nav__dropdown nav,
+.platform-nav {
+	.container {
+		padding: 0;
+	}
+}
+
 .platform-nav__inner {
 	margin: 0;
-    padding: 0;
     display: flex;
     list-style: none;
 	gap: 2.5rem;
@@ -479,6 +489,10 @@
 		background-image: linear-gradient(270deg, var(--content-nav-sub-bg) 0%, var(--content-nav-sub-bg) 10%, transparent 100%);
 	}
 
+	.container {
+		padding: 0;
+	}
+
     nav {
         display: flex;
         align-items: center;
@@ -494,6 +508,7 @@
             border-bottom: 2px solid transparent;
             padding: 0.7rem 0;
             transition: color 300ms;
+			white-space: nowrap;
     
             &.active {
                 border-bottom-color: var(--content-nav-sub-active-border-color);
